# xyzsh

./: .gitignore  AUTHORS  CHANGELOG  LICENSE  Makefile.in  README  README.ja  README.md  TODO  USAGE  USAGE.ja  all_build.sh  completion.xyzsh  config.h.in  configure  configure.in  help.xyzsh  home_build.sh  read_history.xyzsh  update_xyzsh.sh  upload_to_server.sh  xyzsh.xyzsh
autom4te.cache/: output.0  requests  traces.0
man/man1/: xyzsh.1
src/: block.c  class.c  cmd_ary.c  cmd_base.c  cmd_condition.c  cmd_curses.c  cmd_file.c  cmd_loop.c  cmd_num.c  cmd_obj.c  cmd_str.c  completion.c  curses.c  debug.c  debug.h  editline.c  env.c  exp.c  extprog.c  fd.c  fun.c  gc.c  hash.c  interface.c  kanji.c  kanji.h  list.c  load.c  main.c  memchecker.c  nfun.c  node.c  obj_alias.c  obj_class.c  obj_completion.c  obj_extprog.c  obj_fd.c  obj_fun.c  obj_hash.c  obj_int.c  (+18 more)
src/editline/: chartype.h  read.c  readline.h  search.c  vi.c
src/ext/: migemo.c  migemo.dll.xyzsh  migemo.so.xyzsh  migemo.xyzsh
src/xyzsh/: block.h  curses.h  debug.h  hash.h  kanji.h  list.h  string.h  vector.h  xyzsh.h
